primitives/runtime-interface/tests/ui/no_duplicate_versions.stderr
error: Duplicated version attribute
 --> $DIR/no_duplicate_versions.rs:7:2
  |
7 |     #[version(2)]
  |     ^

error: Previous version with the same number defined here
 --> $DIR/no_duplicate_versions.rs:5:2
  |
5 |     #[version(2)]
  |     ^
